--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "demoseed.js",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "handlebars": "^4.7.6",
     "knex": "^0.21.1",
+    "nodemon": "^2.0.4",
     "pg": "^8.2.1"
   },
   "devDependencies": {},
