--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
     "handlebars": "^4.7.6",
     "knex": "^0.21.1",
     "nodemon": "^2.0.4",
