--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "1.0.0",
   "main": "demoseed.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "knex": "^0.21.1",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^8.2.1"
   },
   "devDependencies": {},
